fix(pornpics): properly handle searches

--- a/src/all/pornpics/assets/i18n/messages_en.properties
+++ b/src/all/pornpics/assets/i18n/messages_en.properties
@@ -1,3 +1,4 @@
+chapter.name.default=Gallery
 config-category-title=Categories
 config-category-summary=Categories for popular and recently updated lists
 config-category-option-default=Default
@@ -17,3 +18,6 @@ config-category-option-nurse=Nurse
 config-category-option-nun=Nun
 config-category-option-stockings=Stockings
 config-category-option-twins=Twins
+filter.time.title=sort
+filter.time.option.popular=Most Popular
+filter.time.option.recent=Most Recent
