--- a/src/all/pornpics/assets/i18n/messages_zh.properties
+++ b/src/all/pornpics/assets/i18n/messages_zh.properties
@@ -1,3 +1,4 @@
+chapter.name.default=画廊
 config-category-title=分类
 config-category-summary=分类用于热门和最近更新列表
 config-category-option-default=默认
@@ -17,3 +18,6 @@ config-category-option-nurse=护士
 config-category-option-nun=修女
 config-category-option-stockings=丝袜
 config-category-option-twins=双胞胎
+filter.time.title=排序
+filter.time.option.popular=最受欢迎
+filter.time.option.recent=最近更新
