feat(pornpics): add filter

--- a/src/all/pornpics/assets/i18n/messages_en.properties
+++ b/src/all/pornpics/assets/i18n/messages_en.properties
@@ -18,6 +18,24 @@ config-category-option-nurse=Nurse
 config-category-option-nun=Nun
 config-category-option-stockings=Stockings
 config-category-option-twins=Twins
+
+filter.header.ignored-when-search=These filters will be ignored when text search is active!
+filter.header.select-active-category-type=Set activate category
+filter.header.select-category-type-param=Set category parameters
+
 filter.time.title=sort
 filter.time.option.popular=Most Popular
 filter.time.option.recent=Most Recent
+
+filter.active-category-type.title=Active categories
+filter.active-category-type.option.unselected=Unselected
+filter.active-category-type.option.recommend=Recommend
+filter.active-category-type.option.categories=Categories
+filter.active-category-type.option.tags=Tags
+filter.active-category-type.option.porn-star=Porn Star
+filter.active-category-type.option.channels=Channels
+filter.category-type.recommend.title=Recommend
+filter.category-type.categories.title=Categories
+filter.category-type.tags.title=Tags
+filter.category-type.porn-star.title=Porn Star
+filter.category-type.channels.title=Channels
