--- a/src/all/pornpics/assets/i18n/messages_zh.properties
+++ b/src/all/pornpics/assets/i18n/messages_zh.properties
@@ -18,6 +18,24 @@ config-category-option-nurse=护士
 config-category-option-nun=修女
 config-category-option-stockings=丝袜
 config-category-option-twins=双胞胎
+
+filter.header.ignored-when-search=以下过滤在文本搜索时会被忽略！
+filter.header.select-active-category-type=选择激活分类类型
+filter.header.select-category-type-param=选择分类类型参数
+
 filter.time.title=排序
 filter.time.option.popular=最受欢迎
 filter.time.option.recent=最近更新
+
+filter.active-category-type.title=激活分类类型
+filter.active-category-type.option.unselected=未选择
+filter.active-category-type.option.recommend=推荐
+filter.active-category-type.option.categories=分类
+filter.active-category-type.option.tags=标签
+filter.active-category-type.option.porn-star=色情明星
+filter.active-category-type.option.channels=频道
+filter.category-type.recommend=推荐
+filter.category-type.categories.title=分类
+filter.category-type.tags.title=标签
+filter.category-type.porn-star.title=色情明星
+filter.category-type.channels.title=频道
