fix(pornpics): correct category urlPart values.

--- a/src/all/pornpics/assets/i18n/recommend_categories_en.json
+++ b/src/all/pornpics/assets/i18n/recommend_categories_en.json
@@ -24,8 +24,8 @@
   {"name": "High Heels", "categoryTypeName": "CATEGORY", "link": "/high-heels/"},
 
   {"name": "Onlyfans", "categoryTypeName": "CHANNEL", "link": "/search/srch.php?q=onlyfans"},
-  {"name": "Patreon koreanbeautygirl", "categoryTypeName": "CHANNEL", "link": "/channels/patreon-koreanbeautygirl/recent/"},
-  {"name": "Patreon Hornycos", "categoryTypeName": "CHANNEL", "link": "/channels/patreon-hornycos/"},
-  {"name": "Patreon Scarletai", "categoryTypeName": "CHANNEL", "link": "/channels/patreon-scarletai/"}
+  {"name": "Patreon koreanbeautygirl", "categoryTypeName": "CHANNEL", "link": "/search/srch.php?q=patreon+koreanbeautygirl"},
+  {"name": "Patreon Hornycos", "categoryTypeName": "CHANNEL", "link": "/search/srch.php?q=patreon+hornycos"},
+  {"name": "Patreon Scarletai", "categoryTypeName": "CHANNEL", "link": "/search/srch.php?q=patreon+scarletai"}
 
 ]
