--- a/src/all/pornpics/assets/i18n/recommend_categories_zh.json
+++ b/src/all/pornpics/assets/i18n/recommend_categories_zh.json
@@ -23,7 +23,7 @@
   {"name": "高跟鞋", "categoryTypeName": "CATEGORY", "link": "/zh/high-heels/"},
 
   {"name": "Onlyfans", "categoryTypeName": "CHANNEL", "link": "/search/srch.php?q=onlyfans"},
-  {"name": "Patreon 韩国美女", "categoryTypeName": "CHANNEL", "link": "/zh/channels/patreon-koreanbeautygirl/recent/"},
-  {"name": "Patreon Horny COS", "categoryTypeName": "CHANNEL", "link": "/zh/channels/patreon-hornycos/"},
-  {"name": "Patreon Scarlet AI", "categoryTypeName": "CHANNEL", "link": "/zh/channels/patreon-scarletai/"}
+  {"name": "Patreon 韩国美女", "categoryTypeName": "CHANNEL", "link": "/search/srch.php?q=patreon+koreanbeautygirl"},
+  {"name": "Patreon Horny COS", "categoryTypeName": "CHANNEL", "link": "/search/srch.php?q=patreon+hornycos"},
+  {"name": "Patreon Scarlet AI", "categoryTypeName": "CHANNEL", "link": "/search/srch.php?q=patreon+scarletai"}
 ]
