--- a/src/all/pornpics/assets/i18n/messages_zh.properties
+++ b/src/all/pornpics/assets/i18n/messages_zh.properties
@@ -28,13 +28,12 @@ filter.time.option.popular=最受欢迎
 filter.time.option.recent=最近更新
 
 filter.active-category-type.title=激活分类类型
-filter.active-category-type.option.unselected=未选择
 filter.active-category-type.option.recommend=推荐
 filter.active-category-type.option.categories=分类
 filter.active-category-type.option.tags=标签
 filter.active-category-type.option.porn-star=色情明星
 filter.active-category-type.option.channels=频道
-filter.category-type.recommend=推荐
+filter.category-type.recommend.title=推荐
 filter.category-type.categories.title=分类
 filter.category-type.tags.title=标签
 filter.category-type.porn-star.title=色情明星
