feat(YellowNote): improve domain configuration and URL handling
- Implement dual domain configuration (default + override)
  - Default settings refresh when code updates occur
  - Override settings maintain custom configurations
- Enhance URL processing using HttpUrl
  - Fix encoding issues in query URLs
  - Improve URL parsing reliability

--- a/src/all/yellownote/assets/i18n/messages_en.properties
+++ b/src/all/yellownote/assets/i18n/messages_en.properties
@@ -70,5 +70,11 @@ filter.category.option.taiwan-studios-jvid=Taiwan Studios: JVID
 filter.category.option.taiwan-studios-fantasy-factory=Taiwan Studios: Fantasy Factory
 filter.category.option.taiwan-studios-tpimage=Taiwan Studios: TPimage
 filter.category.option.others-ai-photos=Others: AI Photos
+
 config.domain.title=Domain Settings
-config.domain.summary=If the current domain is blocked, you can change it manually here. Takes effect after restart.
+config.domain.summary=If the current domain is blocked, you can change it manually here. It will take effect after restarting the app.
+config.domain.dialog.title=Domain Settings
+config.domain.dialog.message=Default domain:
+config.domain.toast.changed-success=Domain changed successfully. It will take effect after restarting the app.
+config.domain.toast.changed-failed=Invalid domain!
+
