--- a/src/all/yellownote/assets/i18n/messages_zh_hans.properties
+++ b/src/all/yellownote/assets/i18n/messages_zh_hans.properties
@@ -73,6 +73,10 @@ filter.category.option.taiwan-studios-fantasy-factory=台湾工作室: Fantasy F
 filter.category.option.taiwan-studios-tpimage=台湾工作室: TPimage
 filter.category.option.others-ai-photos=其他套图: AI图区
 
-
 config.domain.title=域名设置
-config.domain.summary=如果当前域名被封，可在此手动更换。重启后生效。
+config.domain.summary=如果当前域名被封，可在此手动更换。重启应用后生效。
+config.domain.dialog.title=域名设置
+config.domain.dialog.message=默认域名: 
+config.domain.toast.changed-success=已更换域名，重启应用后生效。
+config.domain.toast.changed-failed=无效域名！
+
