--- a/src/all/yellownote/assets/i18n/messages_zh_hant.properties
+++ b/src/all/yellownote/assets/i18n/messages_zh_hant.properties
@@ -71,6 +71,10 @@ filter.category.option.taiwan-studios-fantasy-factory=臺灣工作室: Fantasy F
 filter.category.option.taiwan-studios-tpimage=臺灣工作室: TPimage
 filter.category.option.others-ai-photos=其他套圖: AI圖區
 
-
 config.domain.title=網域設定
-config.domain.summary=若目前網域遭封鎖，可在此手動更換。重新啟動後生效。
+config.domain.summary=若目前網域遭封鎖，可在此手動更換。重新啟動應用後生效。
+config.domain.dialog.title=網域設定
+config.domain.dialog.message=預設網域：
+config.domain.toast.changed-success=網域已更換，重新啟動應用後生效。
+config.domain.toast.changed-failed=無效的網域！
+
