--- a/src/all/yellownote/assets/i18n/messages_es.properties
+++ b/src/all/yellownote/assets/i18n/messages_es.properties
@@ -74,4 +74,9 @@ filter.category.option.taiwan-studios-tpimage=Estudios de Taiwán: TPimage
 filter.category.option.others-ai-photos=Otras: AI Photos
 
 config.domain.title=Configuración de dominio
-config.domain.summary=Si el dominio actual está bloqueado, puedes cambiarlo manualmente aquí. Se aplicará después de reiniciar.
+config.domain.summary=Si el dominio actual está bloqueado, puedes cambiarlo manualmente aquí. Se aplicará después de reiniciar la aplicación.
+config.domain.dialog.title=Configuración de dominio
+config.domain.dialog.message=Dominio predeterminado: 
+config.domain.toast.changed-success=Dominio cambiado correctamente. Se aplicará tras reiniciar la aplicación.
+config.domain.toast.changed-failed=¡Dominio no válido!
+
