--- a/src/all/yellownote/assets/i18n/messages_ko.properties
+++ b/src/all/yellownote/assets/i18n/messages_ko.properties
@@ -74,4 +74,9 @@ filter.category.option.taiwan-studios-tpimage=대만 스튜디오: TPimage
 filter.category.option.others-ai-photos=기타: AI 사진
 
 config.domain.title=도메인 설정
-config.domain.summary=도메인이 차단된 경우, 여기에서 수동으로 변경할 수 있습니다. 재시작 후 적용됩니다.
+config.domain.summary=현재 도메인이 차단된 경우, 여기에서 수동으로 변경할 수 있습니다. 앱을 재시작하면 적용됩니다.
+config.domain.dialog.title=도메인 설정
+config.domain.dialog.message=기본 도메인: 
+config.domain.toast.changed-success=도메인이 변경되었습니다. 앱을 재시작하면 적용됩니다.
+config.domain.toast.changed-failed=유효하지 않은 도메인입니다!
+
