--- a/src/all/comickfun/assets/i18n/messages_en.properties
+++ b/src/all/comickfun/assets/i18n/messages_en.properties
@@ -22,3 +22,6 @@ score_position_top=Top
 score_position_middle=Middle
 score_position_bottom=Bottom
 score_position_none=Hide Score
+chapter_score_filtering_title=Filter scanlators automatically based on chapter score
+chapter_score_filtering_on=For each chapter, only displays the scanlator with the highest score
+chapter_score_filtering_off=Displays all scanlators for all chapters
