Comick: option to de-duplicate chapters based on "score" (#8923)
* Adds the ability to automatically filter chapters in comick based on their "score"

* wording update, version bump

* use chapter_ prefix when referring to score filtering

* Update src/all/comickfun/assets/i18n/messages_en.properties

Co-authored-by: AwkwardPeak7 <48650614+AwkwardPeak7@users.noreply.github.com>

* change syntax for filtering based on PR feedback

* figured out how to make an extension

* updated, thanks!

---------

Co-authored-by: AwkwardPeak7 <48650614+AwkwardPeak7@users.noreply.github.com>

--- a/src/all/comickfun/assets/i18n/messages_en.properties
+++ b/src/all/comickfun/assets/i18n/messages_en.properties
@@ -22,3 +22,6 @@ score_position_top=Top
 score_position_middle=Middle
 score_position_bottom=Bottom
 score_position_none=Hide Score
+chapter_score_filtering_title=Automatically de-duplicate chapters
+chapter_score_filtering_on=For each chapter, only displays the scanlator with the highest score
+chapter_score_filtering_off=Does not filterout any chapters based on score (any other scanlator filtering will still apply)
