--- a/src/all/comickfun/assets/i18n/messages_en.properties
+++ b/src/all/comickfun/assets/i18n/messages_en.properties
@@ -13,7 +13,7 @@ group_tags_on=Will prefix tags with their type
 group_tags_off=List all tags together
 update_cover_title=Update Covers
 update_cover_on=Keep cover updated
-update_cover_off=Prefer first cover\n"Unaffected by Cover Quality"
+update_cover_off=Prefer first cover
 local_title_title=Translated Title
 local_title_on=if available
 local_title_off=Use the default title from the site
