--- a/src/all/comickfun/assets/i18n/messages_en.properties
+++ b/src/all/comickfun/assets/i18n/messages_en.properties
@@ -25,7 +25,7 @@ score_position_none=Hide Score
 cover_quality_title=Cover Quality
 cover_quality_original=Original
 cover_quality_compressed=Compressed
-cover_quality_web_default=Web Default
+cover_quality_web_default=Small (Web Default)
 chapter_score_filtering_title=Automatically de-duplicate chapters
 chapter_score_filtering_on=For each chapter, only displays the scanlator with the highest score
 chapter_score_filtering_off=Does not filterout any chapters based on score (any other scanlator filtering will still apply)
