--- a/src/all/comickfun/assets/i18n/messages_en.properties
+++ b/src/all/comickfun/assets/i18n/messages_en.properties
@@ -22,6 +22,10 @@ score_position_top=Top
 score_position_middle=Middle
 score_position_bottom=Bottom
 score_position_none=Hide Score
+cover_quality_title=Cover Quality
+cover_quality_original=Original
+cover_quality_compressed=Compressed
+cover_quality_web_default=Small (Web Default)
 chapter_score_filtering_title=Automatically de-duplicate chapters
 chapter_score_filtering_on=For each chapter, only displays the scanlator with the highest score
 chapter_score_filtering_off=Does not filterout any chapters based on score (any other scanlator filtering will still apply)
