Add preferred groups filter and it's localization

--- a/src/all/comickfun/assets/i18n/messages_en.properties
+++ b/src/all/comickfun/assets/i18n/messages_en.properties
@@ -1,5 +1,7 @@
 ignored_groups_title=Ignored Groups
 ignored_groups_summary=Chapters from these groups won't be shown.\nOne group name per line (case-insensitive)
+preferred_groups_title=Preferred Groups
+preferred_groups_summary=Chapters from these groups will have priority over others (Even if lower score).\nOne group name per line (case-insensitive)
 ignored_tags_title=Ignored Tags
 ignored_tags_summary=Manga with these tags won't show up when browsing.\nOne tag per line (case-insensitive)
 show_alternative_titles_title=Show Alternative Titles
