--- a/lib-multisrc/machinetranslations/assets/i18n/messages_en.properties
+++ b/lib-multisrc/machinetranslations/assets/i18n/messages_en.properties
@@ -7,7 +7,7 @@ disable_website_setting_summary=Site fonts will be disabled and your device's fo
 disable_word_break_title=Disable word break
 disable_word_break_summary=This feature prevents words from being automatically broken in the middle of a line.
 disable_translator_title=Disable translator
-disable_translator_summary=Disable auto translation and enable source translation
+disable_translator_summary=Disable auto translation and enable source translation. This does not mean that a translation is available.
 translate_dialog_box_title=Translator
 translate_dialog_box_summary=Engine used to translate dialog boxes
 translate_dialog_box_toast=The translator has been changed to
