Add support for translating manga details

--- a/lib-multisrc/machinetranslations/assets/i18n/messages_en.properties
+++ b/lib-multisrc/machinetranslations/assets/i18n/messages_en.properties
@@ -11,3 +11,5 @@ disable_translator_summary=Disable auto translation and enable source translatio
 translate_dialog_box_title=Translator
 translate_dialog_box_summary=Engine used to translate dialog boxes
 translate_dialog_box_toast=The translator has been changed to
+enable_manga_details_translation_title=Enable translation of manga details
+enable_manga_details_translation_summary=This option will slow down the loading of manga details
