--- a/lib-multisrc/machinetranslations/assets/i18n/messages_pt_br.properties
+++ b/lib-multisrc/machinetranslations/assets/i18n/messages_pt_br.properties
@@ -11,3 +11,5 @@ disable_translator_summary=Desativar tradução automática e ativar tradução 
 translate_dialog_box_title=Tradutor
 translate_dialog_box_summary=Motor utilizado para traduzir caixas de diálogo
 translate_dialog_box_toast=O tradutor foi alterado para
+enable_manga_details_translation_title=Habilitar tradução dos detalhes do manga
+enable_manga_details_translation_summary=Esta opção tornará o carregamento dos detalhes do mangá mais lento
