--- a/lib-multisrc/machinetranslations/assets/i18n/messages_pt_br.properties
+++ b/lib-multisrc/machinetranslations/assets/i18n/messages_pt_br.properties
@@ -7,7 +7,9 @@ disable_website_setting_summary=As fontes do site serão desativadas e as fontes
 disable_word_break_title=Desativar quebra de palavras
 disable_word_break_summary=Esse recurso impede que palavras sejam quebradas automaticamente no meio da linha.
 disable_translator_title=Desativar tradutor
-disable_translator_summary=Desativar tradução automática e ativar tradução da fonte
+disable_translator_summary=Desativar tradução automática e ativar tradução da fonte. Isso não significa que há uma tradução disponivel.
 translate_dialog_box_title=Tradutor
 translate_dialog_box_summary=Motor utilizado para traduzir caixas de diálogo
 translate_dialog_box_toast=O tradutor foi alterado para
+enable_manga_details_translation_title=Habilitar tradução dos detalhes do manga
+enable_manga_details_translation_summary=Esta opção tornará o carregamento dos detalhes do mangá mais lento
