fix(YellowNote): properly adapt to new languages
- Implement correct language adaptation
- Add settings for language selection, defaulting to system language if unset
- Use English for unsupported languages
- Fix incorrect formatMediaCount extraction

--- a/src/all/yellownote/assets/i18n/messages_zh_hans.properties
+++ b/src/all/yellownote/assets/i18n/messages_zh_hans.properties
@@ -80,3 +80,7 @@ config.domain.dialog.message=默认域名:
 config.domain.toast.changed-success=已更换域名，重启应用后生效。
 config.domain.toast.changed-failed=无效域名！
 
+config.language.title=语言
+config.language.summary=设置拓展使用的语言。重启应用后生效。
+
+error.unset-language=请先在拓展设置中选择使用语言
