--- a/src/all/yellownote/assets/i18n/messages_en.properties
+++ b/src/all/yellownote/assets/i18n/messages_en.properties
@@ -78,3 +78,8 @@ config.domain.dialog.message=Default domain:
 config.domain.toast.changed-success=Domain changed successfully. It will take effect after restarting the app.
 config.domain.toast.changed-failed=Invalid domain!
 
+config.language.title=Language
+config.language.summary=Set extension language. Effective after restart.
+
+error.unset-language=Please select a language in extension settings first.
+
