--- a/lib-multisrc/machinetranslations/assets/i18n/messages_pt_br.properties
+++ b/lib-multisrc/machinetranslations/assets/i18n/messages_pt_br.properties
@@ -1,9 +1,13 @@
+font_name_title=Fonte
+font_name_summary=Personalize os diálogos escolhendo a fonte de sua preferência
+font_name_message=Fonte alterada para %s
+font_name_device_title=Dispositivo
 font_size_title=Tamanho da fonte
 font_size_summary=As alterações de fonte não serão aplicadas aos capítulos baixados ou armazenados em cache. O tamanho da fonte será ajustado de acordo com o tamanho da caixa de diálogo.
 font_size_message=Tamanho da fonte foi alterada para %s
 default_font_size=Padrão
-disable_website_setting_title=Desativar configurações do site
-disable_website_setting_summary=As fontes do site serão desativadas e as fontes de seu dispositivo serão aplicadas. Isso não se aplica a capítulos baixados ou armazenados em cache.
+default_font_name=Padrão
+default_font_name_title=Site
 disable_word_break_title=Desativar quebra de palavras
 disable_word_break_summary=Esse recurso impede que palavras sejam quebradas automaticamente no meio da linha.
 disable_translator_title=Desativar tradutor
