--- a/lib-multisrc/machinetranslations/assets/i18n/messages_en.properties
+++ b/lib-multisrc/machinetranslations/assets/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 font_name_title=Font name
-font_name_summary=Customize dialogues by selecting your preferred font
+font_name_summary=Customize dialogues by choosing your preferred font. To apply the change to chapters that have already been read, you will need to clear the chapter cache in "More > Data and storage > Clear chapter cache". Font changes will not affect downloaded chapters
 font_name_message=Font name changed to %s
 font_name_device_title=Device
 font_size_title=Font size
