--- a/lib-multisrc/machinetranslations/assets/i18n/messages_pt_br.properties
+++ b/lib-multisrc/machinetranslations/assets/i18n/messages_pt_br.properties
@@ -1,5 +1,5 @@
 font_name_title=Fonte
-font_name_summary=Personalize os diálogos escolhendo a fonte de sua preferência
+font_name_summary=Personalize os diálogos escolhendo a fonte de sua preferência. Para aplicar a alteração em capitulos lidos será necessário limpar o cache de capitulos em "Mais > Dados e armazenamento > Limpar cache de capítulos". As alterações de fonte não serão aplicadas aos capítulos baixados.
 font_name_message=Fonte alterada para %s
 font_name_device_title=Dispositivo
 font_size_title=Tamanho da fonte
