MachineTranslations: Add font settings (#10307)
* Add font settings

* Bump version

* Fix utf-8

* Add open fonts

* Fix lint

* Update messages

* Fix filename

* Remove distinctBy

--- a/lib-multisrc/machinetranslations/assets/i18n/messages_en.properties
+++ b/lib-multisrc/machinetranslations/assets/i18n/messages_en.properties
@@ -1,9 +1,13 @@
+font_name_title=Font name
+font_name_summary=Customize dialogues by choosing your preferred font. To apply the change to chapters that have already been read, you will need to clear the chapter cache in "More > Data and storage > Clear chapter cache". Font changes will not affect downloaded chapters
+font_name_message=Font name changed to %s
+font_name_device_title=Device
 font_size_title=Font size
 font_size_summary=Font changes will not be applied to downloaded or cached chapters. The font size will be adjusted according to the size of the dialog box.
 font_size_message=Font size changed to %s
 default_font_size=Default
-disable_website_setting_title=Disable source settings
-disable_website_setting_summary=Site fonts will be disabled and your device's fonts will be applied. This does not apply to downloaded or cached chapters.
+default_font_name=Default
+default_font_name_title=Web site
 disable_word_break_title=Disable word break
 disable_word_break_summary=This feature prevents words from being automatically broken in the middle of a line.
 disable_translator_title=Disable translator
