--- a/src/all/manhuarm/assets/i18n/messages_manhuarm_en.properties
+++ b/src/all/manhuarm/assets/i18n/messages_manhuarm_en.properties
@@ -14,6 +14,8 @@ disable_translator_summary=Disable auto translation and enable source translatio
 translate_dialog_box_title=Translator
 translate_dialog_box_summary=Engine used to translate dialog boxes
 translate_dialog_box_toast=The translator has been changed to
-enable_manga_details_translation_title=Enable translation of manga details
-enable_manga_details_translation_summary=This option will slow down the loading of manga details
 chapter_unavailable_message=Chapter cannot be translated
+dialog_box_scale_title=Dialog box scale
+dialog_box_scale_default=Default
+dialog_box_scale_summary=Customize the size of the dialog box. This can be useful if you want larger fonts. Setting a value greater than 1.0x will cause the text to overflow the expected dialog box
+dialog_box_scale_message=Dialog box scale changed to %s
