--- a/src/all/manhuarm/assets/i18n/messages_manhuarm_pt_br.properties
+++ b/src/all/manhuarm/assets/i18n/messages_manhuarm_pt_br.properties
@@ -14,6 +14,8 @@ disable_translator_summary=Desativar tradução automática e ativar tradução 
 translate_dialog_box_title=Tradutor
 translate_dialog_box_summary=Motor utilizado para traduzir caixas de diálogo
 translate_dialog_box_toast=O tradutor foi alterado para
-enable_manga_details_translation_title=Habilitar tradução dos detalhes do manga
-enable_manga_details_translation_summary=Esta opção tornará o carregamento dos detalhes do mangá mais lento
 chapter_unavailable_message=O capítulo não pode ser traduzido
+dialog_box_scale_title=Escala da caixa de diálogo
+dialog_box_scale_default=Padrão
+dialog_box_scale_summary=Personalize o tamanho da caixa de diálogo. Isso pode ser útil se você desejar fontes maiores. Definir um valor maior que 1,0x fará com que o texto ultrapasse os limites da caixa de diálogo esperada
+dialog_box_scale_message=A escala da caixa de diálogo foi alterada para %s
