feat(YellowNote): add language switch notification and optimize config
- Add success notification for language switching
- Remove redundant getStringOrDefault implementation

--- a/src/all/yellownote/assets/i18n/messages_en.properties
+++ b/src/all/yellownote/assets/i18n/messages_en.properties
@@ -80,3 +80,5 @@ config.domain.toast.changed-failed=Invalid domain!
 
 config.language.title=Language
 config.language.summary=Set extension language. Effective after restart.
+config.language.changed-success=Language changed successfully. It will take effect after restarting the app.
+config.language.changed-success=Language changed successfully. It will take effect after restarting the app.
