--- a/src/all/yellownote/assets/i18n/messages_ko.properties
+++ b/src/all/yellownote/assets/i18n/messages_ko.properties
@@ -82,3 +82,4 @@ config.domain.toast.changed-failed=유효하지 않은 도메인입니다!
 
 config.language.title=언어
 config.language.summary=확장 프로그램 사용 언어 설정. 재실행 후 적용됩니다.
+config.language.changed-success=언어 변경 성공. 앱 재시작 후 적용됩니다.
