--- a/src/all/yellownote/assets/i18n/messages_es.properties
+++ b/src/all/yellownote/assets/i18n/messages_es.properties
@@ -82,3 +82,4 @@ config.domain.toast.changed-failed=¡Dominio no válido!
 
 config.language.title=Idioma
 config.language.summary=Configurar idioma de la extensión. Efectivo tras reiniciar.
+config.language.changed-success=Idioma cambiado correctamente. Se aplicará al reiniciar la aplicación.
