--- a/src/all/yellownote/assets/i18n/messages_zh_hans.properties
+++ b/src/all/yellownote/assets/i18n/messages_zh_hans.properties
@@ -82,3 +82,4 @@ config.domain.toast.changed-failed=无效域名！
 
 config.language.title=语言
 config.language.summary=设置拓展使用的语言。重启应用后生效。
+config.language.changed-success=语言修改成功。重启应用后生效。
