--- a/src/all/yellownote/assets/i18n/messages_zh_hant.properties
+++ b/src/all/yellownote/assets/i18n/messages_zh_hant.properties
@@ -80,3 +80,4 @@ config.domain.toast.changed-failed=無效的網域！
 
 config.language.title= 語言
 config.language.summary= 設定擴充功能使用的語言。重啓應用後生效。
+config.language.changed-success=語言修改成功。重啓應用後生效。
